correction for z-index

--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@ section {
   flex-direction: row;
   justify-content: space-between;
   font-weight: 300;
-  z-index: 20;
+  z-index: 120;
   box-shadow: 1px 12px 15px -11px rgba(0, 0, 0, 0.7);
 }
 .topnav ul > li {
@@ -506,7 +506,7 @@ footer > p {
   background-color: rgba(0,0,0,0.8);
   flex-direction: row;
   justify-content: center;
-  z-index: 50;
+  z-index: 200;
 }
 .additional-layer-container.open {
   display: flex;
